gcc/testsuite/gdc.test/compilable/test7524.d
// https://issues.dlang.org/show_bug.cgi?id=7524

#line __LINE__ "y.d"
