gcc/testsuite/gdc.test/fail_compilation/fail22825b.d
// https://issues.dlang.org/show_bug.cgi?id=22825
/* TEST_OUTPUT:
---
fail_compilation/fail22825b.d(7): Error: declaration expected, not `#`
---
*/
#
                 line




12
